--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "quiz-app-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
